--- a/themes/plain/layouts/partials/footer.html
+++ b/themes/plain/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 	<div class="row"  style="margin-top: 15px">
 		 <button disabled="disabled" class="twelve columns">
-			 Copyright ©  2020 - Armando Arce-Orozco
+			 Copyright ©  2020 - Ars
 		 </button>
 	</div>
