--- a/themes/plain/layouts/authors/single.html
+++ b/themes/plain/layouts/authors/single.html
@@ -7,7 +7,7 @@
 <div class="row">
 	 <div class="six columns">
      <h4 style="margin-top: 15px">{{ $dataJ.author }}</h4>
-		 <h5>Author's details</h5>
+		 <h5>Actor's details</h5>
        <label for="nationalityInput">Nationality</label>
        <input class="u-full-width" id="nationality" type="text" value="{{ $dataJ.nationality }}" readonly/>
    </div>
