--- a/themes/plain/layouts/partials/header.html
+++ b/themes/plain/layouts/partials/header.html
@@ -2,9 +2,9 @@
       <button onclick="location.href='/';"
 			class="three columns">Home</button>
       <button onclick="location.href='/books/';"
-	  	 class="three columns">Books</button>
+	  	 class="three columns">Movie</button>
       <button onclick="location.href='/authors/';"
-	     class="three columns">Authors</button>
+	     class="three columns">Actors</button>
 	    <button onclick="location.href='/publishers/';"
 	     class="three columns">Publishers</button>
   </div>
