--- a/themes/plain/layouts/books/single.html
+++ b/themes/plain/layouts/books/single.html
@@ -7,7 +7,7 @@
 <div class="row">
 	 <div class="six columns">
      <h4 style="margin-top: 15px">{{ $dataJ.title }}</h4>
-		 <h5>Book's details</h5>
+		 <h5>Movie's details</h5>
      <label for="copyrightInput">Copyright</label>
      <input class="u-full-width" type="text" id="copyright" value="{{ $dataJ.copyright }}" readonly/>
    </div>
