--- a/themes/plain/layouts/books/single.html
+++ b/themes/plain/layouts/books/single.html
@@ -8,8 +8,8 @@
 	 <div class="six columns">
      <h4 style="margin-top: 15px">{{ $dataJ.title }}</h4>
 		 <h5>Movie's details</h5>
-     <label for="copyrightInput">Copyright</label>
-     <input class="u-full-width" type="text" id="copyright" value="{{ $dataJ.copyright }}" readonly/>
+     <label for="copyrightInput">Genre</label>
+     <input class="u-full-width" type="text" id="copyright" value="{{ $dataJ.Genre }}" readonly/>
    </div>
 	 <div class="three columns">
 		 <img width="100%" style="margin-left: 50%;" src="/books/{{.File.TranslationBaseName}}.jpg"/>
