--- a/themes/plain/layouts/books/single.html
+++ b/themes/plain/layouts/books/single.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="six columns">
        <label for="editionInput">Year</label>
-       <input class="u-full-width" type="text" id="edition" value="{{ $dataJ.year }}" readonly/>
+       <input class="u-full-width" type="text" id="edition" value="{{ $dataJ.Year }}" readonly/>
     </div>
     <div class="six columns">
        <label for="languageInput">Language</label>
@@ -29,8 +29,8 @@
   <div class="row">
     <div class="six columns">
        <label for=" authorInput">Director</label>
-       <a href="/authors/author_{{ $dataJ.author_id }}">
-         <input class="u-full-width" type="button" id=" author" value="{{ $dataJ.director }}" readonly/>
+       <a href="/authors/author_{{ $dataJ.Director_id }}">
+         <input class="u-full-width" type="button" id=" author" value="{{ $dataJ.Director }}" readonly/>
        </a>
     </div>
     <div class="six columns">
