--- a/themes/plain/layouts/partials/header.html
+++ b/themes/plain/layouts/partials/header.html
@@ -1,7 +1,7 @@
   <div class="row"  style="margin-top: 15px">
       <button onclick="location.href='/';"
 			class="three columns">Home</button>
-      <button onclick="location.href='/books/';"
+      <button onclick="location.href='/movies/';"
 	  	 class="three columns">Movie</button>
       <button onclick="location.href='/authors/';"
 	     class="three columns">Actors</button>
