--- a/themes/plain/layouts/movies/list.html
+++ b/themes/plain/layouts/movies/list.html
@@ -4,8 +4,8 @@
 {{ range (.Paginate .Pages).Pages }}
 <div class="four columns">
 	<figure>
-	 <a href="/books/{{ .File.TranslationBaseName }}">
-   <img width="100%" src="{{( print "/books/" .File.TranslationBaseName ".jpg")}}">
+	 <a href="/movies/{{ .File.TranslationBaseName }}">
+   <img width="100%" src="{{( print "/movies/" .File.TranslationBaseName ".jpg")}}">
   </a>
 	<figcaption style="text-align: center">{{ .Title }}</figcaption>
 </figure>
