--- a/themes/plain/layouts/publishers/single.html
+++ b/themes/plain/layouts/publishers/single.html
@@ -30,13 +30,13 @@
   </div>
 </form>
 
-<h5>Books</h5>
+<h5>Movies</h5>
 <div class="row">
-	{{ range $dataJ.books }}
+	{{ range $dataJ.movies }}
 	<div class="four columns">
 		<figure>
-		 <a href="/books/book_{{ .book_id }}">
-	   <img width="100%" src="{{( print "/books/book_" .book_id ".jpg")}}">
+		 <a href="/movies/book_{{ .book_id }}">
+	   <img width="100%" src="{{( print "/movies/movie_" .movie_id ".jpg")}}">
 	  </a>
 		<figcaption style="text-align: center">{{ .title }}</figcaption>
 		</figure>
