--- a/themes/plain/layouts/movies/single.html
+++ b/themes/plain/layouts/movies/single.html
@@ -29,8 +29,8 @@
   <div class="row">
     <div class="six columns">
        <label for=" authorInput">Director</label>
-       <a href="/authors/author_{{ $dataJ.Director_id }}">
-         <input class="u-full-width" type="button" id=" author" value="{{ $dataJ.Director }}" readonly/>
+       <a href="/directors/director_{{ $dataJ.Director_id }}">
+         <input class="u-full-width" type="button" id=" director" value="{{ $dataJ.Director }}" readonly/>
        </a>
     </div>
     <div class="six columns">
