--- a/themes/plain/layouts/partials/header.html
+++ b/themes/plain/layouts/partials/header.html
@@ -3,8 +3,8 @@
 			class="three columns">Home</button>
       <button onclick="location.href='/movies/';"
 	  	 class="three columns">Movie</button>
-      <button onclick="location.href='/authors/';"
-	     class="three columns">Actors</button>
+      <button onclick="location.href='/Directors/';"
+	     class="three columns">Directors</button>
 	    <button onclick="location.href='/publishers/';"
 	     class="three columns">Publishers</button>
   </div>
