--- a/themes/plain/layouts/partials/header.html
+++ b/themes/plain/layouts/partials/header.html
@@ -3,7 +3,7 @@
 			class="three columns">Home</button>
       <button onclick="location.href='/movies/';"
 	  	 class="three columns">Movie</button>
-      <button onclick="location.href='/Directors/';"
+      <button onclick="location.href='/directors/';"
 	     class="three columns">Directors</button>
 	    <button onclick="location.href='/publishers/';"
 	     class="three columns">Publishers</button>
