--- a/themes/plain/layouts/directors/single.html
+++ b/themes/plain/layouts/directors/single.html
@@ -6,8 +6,8 @@
 
 <div class="row">
 	 <div class="six columns">
-     <h4 style="margin-top: 15px">{{ $dataJ.author }}</h4>
-		 <h5>director's details</h5>
+     <h4 style="margin-top: 15px">{{ $dataJ.Director }}</h4>
+		 <h5>Director's details</h5>
        <label for="nationalityInput">Nationality</label>
        <input class="u-full-width" id="nationality" type="text" value="{{ $dataJ.nationality }}" readonly/>
    </div>
@@ -18,12 +18,12 @@
 
   <div class="row">
     <div class="six columns">
-       <label for="birthInput">Birth Year</label>
-       <input class="u-full-width" id="birth_year" type="text" value="{{ $dataJ.birth_year }}"  readonly/>
+       <label for="VotesInput">Votes</label>
+       <input class="u-full-width" id="Votes" type="text" value="{{ $dataJ.Votes }}"  readonly/>
     </div>
     <div class="six columns">
-       <label for="fieldsInput">Fields</label>
-       <input class="u-full-width" id="fields" type="text" value="{{ $dataJ.fields  }}"  readonly/>
+       <label for="GenreInput">Genre</label>
+       <input class="u-full-width" id="Genre" type="text" value="{{ $dataJ.Genre  }}"  readonly/>
     </div>
   </div>
 
