--- a/themes/plain/layouts/directors/single.html
+++ b/themes/plain/layouts/directors/single.html
@@ -8,8 +8,8 @@
 	 <div class="six columns">
      <h4 style="margin-top: 15px">{{ $dataJ.Director }}</h4>
 		 <h5>Director's details</h5>
-       <label for="nationalityInput">Nationality</label>
-       <input class="u-full-width" id="nationality" type="text" value="{{ $dataJ.nationality }}" readonly/>
+       <label for="NationalityInput">Nationality</label>
+       <input class="u-full-width" id="Nationality" type="text" value="{{ $dataJ.Nationality }}" readonly/>
    </div>
 	 <div class="three columns">
 		 <img width="100%" style="margin-left: 50%;" src="/directors/{{.File.TranslationBaseName}}.jpg"/>
