--- a/themes/plain/layouts/directors/single.html
+++ b/themes/plain/layouts/directors/single.html
@@ -34,7 +34,7 @@
 	<div class="four columns">
 		<figure>
 		 <a href="/movies/movie_{{ .book_id }}">
-	   <img width="100%" src="{{( print "/movies/movie_" .book_id ".jpg")}}">
+	   <img width="100%" src="{{( print "/movies/movie_" .movie_id ".jpg")}}">
 	  </a>
 		<figcaption style="text-align: center">{{ .title }}</figcaption>
 		</figure>
