--- a/themes/plain/layouts/movies/single.html
+++ b/themes/plain/layouts/movies/single.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="six columns">
        <label for=" authorInput">Director</label>
-       <a href="/directors/director_{{ $dataJ.Director_id }}">
+       <a href="/directors/directors_{{ $dataJ.Director_id }}">
          <input class="u-full-width" type="button" id=" director" value="{{ $dataJ.Director }}" readonly/>
        </a>
     </div>
