--- a/themes/plain/layouts/directors/single.html
+++ b/themes/plain/layouts/directors/single.html
@@ -33,7 +33,7 @@
 	{{ range $dataJ.movies }}
 	<div class="four columns">
 		<figure>
-		 <a href="/movies/movie_{{ .book_id }}">
+		 <a href="/movies/movie_{{ .movie_id }}">
 	   <img width="100%" src="{{( print "/movies/movie_" .movie_id ".jpg")}}">
 	  </a>
 		<figcaption style="text-align: center">{{ .title }}</figcaption>
