--- a/themes/plain/layouts/movies/single.html
+++ b/themes/plain/layouts/movies/single.html
@@ -34,9 +34,9 @@
        </a>
     </div>
     <div class="six columns">
-       <label for="languageInput">Publisher</label>
-       <a href="/publishers/publisher_{{ $dataJ.publisher_id }}">
-         <input class="u-full-width" type="button" id="publisher" value="{{ $dataJ.publisher }}" readonly/>
+       <label for="languageInput">actors</label>
+       <a href="/actors/actor_{{ $dataJ.actor_ }}">
+         <input class="u-full-width" type="button" id="actor" value="{{ $dataJ.actor }}" readonly/>
        </a>
     </div>
   </div>
