--- a/themes/plain/layouts/partials/header.html
+++ b/themes/plain/layouts/partials/header.html
@@ -5,8 +5,8 @@
 	  	 class="three columns">Movie</button>
       <button onclick="location.href='/directors/';"
 	     class="three columns">Directors</button>
-	    <button onclick="location.href='/publishers/';"
-	     class="three columns">Publishers</button>
+	    <button onclick="location.href='/actors/';"
+	     class="three columns">Actors</button>
   </div>
   <div class="row">
 		  <div class="nine columns">&nbsp;</div>
