--- a/themes/plain/layouts/actors/list.html
+++ b/themes/plain/layouts/actors/list.html
@@ -4,8 +4,8 @@
 {{ range (.Paginate .Pages).Pages }}
 <div class="four columns">
 	<figure>
-	 <a href="/publishers/{{ .File.TranslationBaseName }}">
-   <img width="100%" src="{{( print "/publishers/" .File.TranslationBaseName ".png")}}">
+	 <a href="/actors/{{ .File.TranslationBaseName }}">
+   <img width="100%" src="{{( print "/actors/" .File.TranslationBaseName ".png")}}">
   </a>
 	<figcaption style="text-align: center">{{ .Title }}</figcaption>
 </figure>
