--- a/themes/plain/layouts/actors/single.html
+++ b/themes/plain/layouts/actors/single.html
@@ -14,18 +14,14 @@
        <input class="u-full-width" id="_id" type="text" value="{{ $dataJ._id }}" readonly/>
     </div>
     <div class="six columns">
-       <label for="countryInput">Country</label>
-       <input class="u-full-width" id="country" type="text" value="{{ $dataJ.country }}" readonly/>
+       <label for="ActorsInput">Actors</label>
+       <input class="u-full-width" id="Actors" type="text" value="{{ $dataJ.Actors }}" readonly/>
     </div>
   </div>
-  <div class="row">
+
     <div class="six columns">
-       <label for="foundedInput">Founded</label>
-       <input class="u-full-width" id="founded" type="text" value="{{ $dataJ.founded }}"  readonly/>
-    </div>
-    <div class="six columns">
-       <label for="genereInput">Genere</label>
-       <input class="u-full-width" id="genere" type="text" value="{{ $dataJ.genere  }}"  readonly/>
+       <label for="GenreInput">Genre</label>
+       <input class="u-full-width" id="Genre" type="text" value="{{ $dataJ.Genre  }}"  readonly/>
     </div>
   </div>
 </form>
@@ -35,7 +31,7 @@
 	{{ range $dataJ.movies }}
 	<div class="four columns">
 		<figure>
-		 <a href="/movies/book_{{ .book_id }}">
+		 <a href="/movies/movie_{{ .movie_id }}">
 	   <img width="100%" src="{{( print "/movies/movie_" .movie_id ".jpg")}}">
 	  </a>
 		<figcaption style="text-align: center">{{ .title }}</figcaption>
