--- a/themes/plain/layouts/actors/single.html
+++ b/themes/plain/layouts/actors/single.html
@@ -18,12 +18,16 @@
        <input class="u-full-width" id="Actors" type="text" value="{{ $dataJ.Actors }}" readonly/>
     </div>
   </div>
-
+  <div class="row">
     <div class="six columns">
-       <label for="GenreInput">Genre</label>
-       <input class="u-full-width" id="Genre" type="text" value="{{ $dataJ.Genre  }}"  readonly/>
+       <label for="YearInput">Year</label>
+       <input class="u-full-width" id="Year" type="text" value="{{ $dataJ.Year }}"  readonly/>
     </div>
-  </div>
+    <div class="six columns">
+      <label for="GenreInput">Genre</label>
+      <input class="u-full-width" id="Genre" type="text" value="{{ $dataJ.Genre  }}"  readonly/>
+   </div>
+ </div>
 </form>
 
 <h5>Movies</h5>
