--- a/themes/plain/layouts/actors/single.html
+++ b/themes/plain/layouts/actors/single.html
@@ -6,7 +6,7 @@
 
 <h4 style="margin-top: 15px">{{ $dataJ.actor }}</h4>
 
-<h5>Actors's details</h5>
+<h5>Actor's details</h5>
 <form>
   <div class="row">
     <div class="six columns">
