--- a/themes/plain/layouts/movies/single.html
+++ b/themes/plain/layouts/movies/single.html
@@ -35,7 +35,7 @@
     </div>
     <div class="six columns">
        <label for="languageInput">Actors</label>
-       <a href="/actors/actors_{{ $dataJ.Actors_ }}">
+       <a href="/actors/actors_{{ $dataJ.Actors_id }}">
          <input class="u-full-width" type="button" id="actor" value="{{ $dataJ.Actors }}" readonly/>
        </a>
     </div>
